force-app/main/default/objects/Service_Endpoint__mdt/Service_Endpoint__mdt.object-meta.xml
<CustomObject>
    <label>Service Endpoint</label>
    <pluralLabel>Service Endpoints</pluralLabel>
</CustomObject>