force-app/main/default/objects/Service_Endpoint__mdt/fields/Accept_Encoding__c.field-meta.xml
<CustomField>
    <fullName>Accept_Encoding__c</fullName>
    <label>Accept Encoding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>gzip,deflate</fullName>
                <default>true</default>
                <label>gzip,deflate</label>
            </value>
            <value>
                <fullName>application/json</fullName>
                <isActive>false</isActive>
                <label>application/json</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>