force-app/main/default/objects/Service_Endpoint__mdt/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>application/json;charset=UTF-8</fullName>
                <default>true</default>
                <label>application/json;UTF-8</label>
            </value>
            <value>
                <fullName>application/xml</fullName>
            </value>
            <value>
                <fullName>application/x-www-form-urlencoded</fullName>
            </value>
            <value>
                <fullName>text/plain</fullName>
            </value>
            <value>
                <fullName>application/json</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>