force-app/main/default/objects/Service_Endpoint__mdt/fields/Include_Client_Header__c.field-meta.xml
<CustomField>
    <fullName>Include_Client_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Pelephone interfaces</description>
    <label>Include Client Header</label>
    <type>Checkbox</type>
</CustomField>