force-app/main/default/objects/Service_Endpoint__mdt/fields/Include_Token__c.field-meta.xml
<CustomField>
    <fullName>Include_Token__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Token</label>
    <type>Checkbox</type>
</CustomField>