force-app/main/default/objects/Service_Endpoint__mdt/fields/is_Stub__c.field-meta.xml
<CustomField>
    <fullName>is_Stub__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Stub</label>
    <type>Checkbox</type>
</CustomField>