force-app/main/default/objects/Service_Endpoint__mdt/fields/Service_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Service_Endpoint__c</fullName>
    <inlineHelpText>the url for the service (method) that comes after the domain,
example : /customer/add
start with &quot;/&quot;</inlineHelpText>
    <label>Service Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>