force-app/main/default/objects/Service_Endpoint__mdt/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <defaultValue>&quot;ApiGateway&quot;</defaultValue>
    <inlineHelpText>the name of the service from the Service Metatdata</inlineHelpText>
    <label>Service Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>