force-app/main/default/objects/Service_Endpoint__mdt/listViews/All_Services.listView-meta.xml
<ListView>
    <fullName>All_Services</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Service_Name__c</columns>
    <columns>Service_Endpoint__c</columns>
    <columns>Headers__c</columns>
    <columns>Accept__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Services</label>
    <language>en_US</language>
</ListView>